--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,8 @@
 
             <android.support.design.widget.TextInputLayout
                     android:id="@+id/main_usuario"
-                    android:layout_width="224dp"
-                    android:layout_height="78dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
@@ -37,14 +37,14 @@
 
             <android.support.design.widget.TextInputLayout
                     android:id="@+id/main_senha"
-                    android:layout_width="224dp"
-                    android:layout_height="78dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/main_usuario"
-                    app:layout_constraintVertical_bias="0.20">
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp">
 
                 <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
@@ -58,13 +58,31 @@
             <android.support.design.button.MaterialButton
                     style="@style/Widget.AppCompat.Button.Colored"
                     android:id="@+id/main_login_btn"
-                    android:layout_width="100dp"
-                    android:layout_height="50dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:text="LOGIN"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/main_senha"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintBottom_toTopOf="@id/main_cadastrar_btn"
+                    android:layout_marginRight="100dp"
+                    android:layout_marginLeft="100dp"/>
+
+            <android.support.design.button.MaterialButton
+                    android:id="@+id/main_cadastrar_btn"
+                    android:text="Cadastrar Usuário"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/main_login_btn"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginEnd="100dp"
+                    android:layout_marginRight="100dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_marginLeft="100dp"
+                    android:layout_marginStart="100dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginTop="8dp"/>
 
         </android.support.constraint.ConstraintLayout>
 
