--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -38,22 +38,27 @@
                     android:id="@+id/welcome_bem_vindo"
                     android:layout_width="100dp"
                     android:layout_height="20dp"
-                    android:layout_marginTop="220dp"
+                    android:layout_marginTop="120dp"
                     android:text="Bem Vindo!!"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    />
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintBottom_toTopOf="@+id/welcome_greeting"
+                    app:layout_constraintVertical_chainStyle="spread"/>
 
             <TextView
                     android:id="@+id/welcome_greeting"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:text="@{@string/greetings(nome)}"
-                    app:layout_constraintStart_toStartOf="@+id/welcome_bem_vindo"
                     app:layout_constraintTop_toBottomOf="@+id/welcome_bem_vindo"
-                    tools:text="Greeting"/>
+                    tools:text="Greeting" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="100dp"
+                    android:layout_marginRight="100dp"
+                    app:layout_constraintBottom_toTopOf="@+id/welcome_button_toast"
+                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="100dp"
+                    android:layout_marginStart="100dp"/>
 
             <android.support.design.button.MaterialButton
                     style="@style/Widget.AppCompat.Button.Colored"
@@ -68,7 +73,9 @@
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginBottom="100dp"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/welcome_greeting"
+                    app:layout_constraintHorizontal_bias="0.5"/>
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
